# DevOrch

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
cli/: main.py
config/: permissions.py  settings.py
core/: agent.py  executer.py  executor.py  mcp.py  memory.py  modes.py  planner.py  sessions.py  skills.py  tasks.py
providers/: __init__.py  anthropic.py  base.py  custom.py  deepseek.py  gemini.py  github_copilot.py  groq.py  kimi.py  lmstudio.py  local.py  mistral.py  openai.py  openrouter.py  together.py
schemas/: message.py  task.py
tests/: __init__.py  test_basic.py  test_core.py  test_integration.py  test_permissions.py  test_schemas.py  test_tools.py
tools/: __init__.py  base.py  edit.py  filesystem.py  grep.py  search.py  shell.py  task.py  terminal.py  terminal_session.py  websearch.py
utils/: logger.py
