[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devorch"
version = "0.2.1"
description = "Multi-provider AI coding assistant CLI with 13+ providers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Aman", email = "amanpreetsinghjhiwant@outlook.com" }
]
keywords = ["ai", "coding", "assistant", "cli", "llm", "openai", "anthropic", "claude", "gpt", "gemini","kimi", "copilot", "openrouter", "llmstudio", "deepseek", "mistral", "together"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.1",
    "openai>=1.28.0",
    "anthropic>=0.25.8",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
    "keyring>=25.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.27.0",
    "questionary>=2.0.0",
    "duckduckgo-search>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Amanbig/DevOrch"
Repository = "https://github.com/Amanbig/DevOrch"
Issues = "https://github.com/Amanbig/DevOrch/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
]

[project.scripts]
devorch = "cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "providers", "schemas", "tools", "config", "utils"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["cli", "core", "providers", "schemas", "tools", "config", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true